# object-harvest

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: object_describe_cleaning.md  synthesis_cost.md
obh/: detect.py  generate.py
obh/utils/: __init__.py  llm_utils.py  moondream_utils.py  prompts.py  qwen_image.py  validation.py
scripts/: obj365.txt  synth_object_dist.py
scripts/clean_describes/: qwen3_235B.py
scripts/create_datasets/: README.md  ovdet_to_hfdataset.py
scripts/qwen-image/: README.md  convert_metadata_objects.py  generate_images.py  requirements.txt  upload_data.py
scripts/qwen-image/utils/: prompt_enhance.py  qwen_image.py
src/object_harvest/: __init__.py  cli.py  detection.py  ingest.py  logging.py  pipeline.py  reader.py  schemas.py  synthesis.py  vlm.py  writer.py
src/object_harvest/utils/: __init__.py  clients.py  concurrency.py  detect_inputs.py  images.py  objects.py  paths.py  runs.py
tests/: __init__.py  conftest.py  test_cli.py  test_detect.py  test_generate.py  test_ingest.py  test_pipeline_mock.py  test_schemas.py  test_synthesis.py  test_utils_images.py  test_utils_images_url_validation.py  test_utils_paths.py  test_utils_runs.py  test_vlm_detection_parser.py
