[project]
name = "object-harvest"
version = "0.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.109.1",
    "pillow>=11.3.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
torch = [
    "diffusers",
    "torch==2.8",
    "transformers>=4.56.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[project.scripts]
obh-detect = "obh.detect:main"
obh-generate = "obh.generate:main"
