[project]
name = "object-harvest"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "moondream>=0.2.0",
    "openai>=2.15.0",
    "pillow>=10.4.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
obh-detect = "obh.detect:main"
obh-generate = "obh.generate:main"
